Table User {
  id Int [pk, increment] // primary key, auto increments
  email String [unique]
  name String
}

Table Role {
  id Int [pk, increment] // primary key, auto increments
  name String [unique]
}

Table Permission {
  id Int [pk, increment] // primary key, auto increments
  name String [unique]
  description String
  route String
}

Table UserRole {
  userId Int [ref: > User.id] // foreign key reference to User table
  roleId Int [ref: > Role.id] // foreign key reference to Role table
}

Table RolePermission {
  roleId Int [ref: > Role.id] // foreign key reference to Role table
  permissionId Int [ref: > Permission.id] // foreign key reference to Permission table
}


Table Customer {
  customerId int [pk, unique, not null]
  name varchar
  email varchar
  phone varchar
  company varchar
}

Table Room {
  roomId int [pk, unique, not null]
  name varchar
  type varchar
  area float
  capacity int
}

Table Order {
  orderId int [pk, unique, not null]
  date date [pk]
  time time [pk]
  roomId int [not null]
  customerId int [not null]
  status varchar
  paymentStatus varchar
}


Ref: UserRole.userId > User.id
Ref: UserRole.roleId > Role.id
Ref: RolePermission.roleId > Role.id
Ref: RolePermission.permissionId > Permission.id
Ref: "Room"."roomId" < "Order"."roomId"
Ref: "Customer"."customerId" < "Order"."customerId"
